🍃🍎 Checkpoint ./index.js:766712/1603 ./package.json:766712/2765

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "^4.16.4",
-    "ws": "^6.2.0"
+    "ws": "^6.2.0",
+    "extra-map": "^1.1.1"
   },
   "engines": {
     "node": "11.x"
